--- a/style.css
+++ b/style.css
@@ -101,6 +101,15 @@ body{
     text-align: center;
 }
 
+.link__list{
+    width: 100%;
+    height: 300px;
+    padding-top: 29px;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+}
+
 .secondary__blocks{
     margin-top: 100px;
 }
