--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body{
 .list__text{
     padding-top: 29px;
     font-size: 36px;
+    color: #151515;
     line-height: 42px;
     text-align: center;
 }
