--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body{
 
 }
 
+@font-face {
+    font-family: Roboto;
+    font-weight: 400;
+    src: url(Roboto-Regular.ttf);
+}
+
 .link{
     text-decoration: none;
 }
@@ -48,7 +54,7 @@ body{
     width: 400px;
     margin: 0 auto;
     padding-top: 30px;
-    font-size: 50px;
+    font-size: 36px;
     line-height: 42px;
     text-align: center;
     color: #FFFFFF;
@@ -94,23 +100,9 @@ body{
     box-shadow: 5px 5px 0px #151515;
 }
 
-.block__list{
-    color: #FFFFFF;
-    background-color: #151515;
-}
-
-.list__text{
+.link__text{
     padding-top: 29px;
     font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-}
-
-.link__list{
-    width: 100%;
-    height: 300px;
-    padding-top: 29px;
-    font-size: 50px;
     line-height: 42px;
     text-align: center;
 }
@@ -142,3 +134,4 @@ body{
     }
     
 }
+
